@@ -143,6 +143,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added [[:Image:Foo.png]] style links to the pagelinks table
 * Avoid duplicate revision imports with Special:Import
 * (bug 7054) Validate email address before sending email confirmation message
+* (bug 7061) Format title on "from (page)" links on Special:Allpages
 
 == Languages updated ==
 
